# DTEAM-django-practical-test

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
CVProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
main/: context_processors.py  middleware.py  models.py  openai_utils.py  serializers.py  tasks.py  tests.py  urls.py  views.py
main/fixtures/: cvs.json
main/migrations/: 0001_initial.py  0002_requestlog.py
main/templates/main/: cv_detail.html  cv_pdf_template.html  home.html  logs.html  settings.html
